# Fetch-Content-Test

./: CMakeLists.txt  Foo.cpp  Foo.h  Logger.h
real_core/: Foo.cpp
